# zipline-engine

./: .gitignore  DOCKER_GUIDE.md  README.md  analyze_symbols.py  debug_timestamps.py  debug_yfinance.py  docker-compose.yml  ingest_bundle.sh  pyproject.toml  run_script.py  test_minute_data.py
.zipline/: daily_nse_equities.py  extension.py
analysis_tools/: comprehensive_trading_metrics.py
backtest_results/: performance_analysis.pkl  raw_results.pkl
bundles/: __init__.py  clean_duckdb_bundle.py  data_bundle.py  duckdb_polars_bundle.py  ingest_bundle.py  local_csv_minute_bundle.py  nse_ingestion.py  nse_intraday_bundle.py  register_bundle.py
calender/: __init__.py  nse_calender.py
config/: __init__.py  config.py
custom_calendar/: __init__.py  nse_custom_calendar.py
data/: symbols.csv
docs/: APIReference.md  BENCHMARK_GUIDE.md  BaseStrategy.md  INDEX.md  NSE_RISKFOLIO_STRATEGY_SUMMARY.md  PICKLE_WORKFLOW_SUMMARY.md  PicklePyfolioWorkflow.md  README.md  README_ENHANCED_FRAMEWORK.md  StrategyWritingGuide.md  ZiplineRunner.md  zipline-data-api-refrence.md  zipline-enhanced-docs.md
engine/: __init__.py  base_strategy.py  enhanced_base_strategy.py  enhanced_zipline_runner.py  zipline_runner.py
examples/: 04_risk_parity_backtest.ipynb  05_momentum_backtest.ipynb  analyze_pickle_results.py  backtest_results.csv  benchmark_examples.py  benchmark_metrics_demo.py  comprehensive_trading_metrics.py  demo_backtest.pickle  demo_pickle_workflow.py  diagnose_rsi_sr_strategy.py  enhanced_pyfolio_example.py  extract_detailed_trade_metrics.py  ingest_bundel.py  (+18 more)
(+1929 files in other folders)
